Fix a memory allocation bug and add -fPIC to the imgutil compile opts
  - Fix a memory allocation bug in job.c where the size of the memory
    block to be allocated was incorrectly calculated to be 0 when
    the job id was also 0.
  - Add -fPIC to the compiler options in the imgutil makefile since
    position-dependent code can't be linked with position-independent
    code when compiling plugins.

--- a/src/imgutil/makefile
+++ b/src/imgutil/makefile
@@ -20,7 +20,7 @@
 #
 
 CC=gcc
-CCFLAGS=-Wall -Wpedantic -std=gnu99
+CCFLAGS=-Wall -Wpedantic -fPIC -std=gnu99
 LFLAGS=-lfreeimage
 NAME=oipimgutil
 
