Fix an issue in the makefile preventing initial compilation
  - Fix an issue in the makefile preventing compilation if the
    sources hadn't been compiled before.
  - Change how the build info is handed over to the compiler.
    The information is now stored in environment variables that
    are defined by sourcing the build-config file.

--- a/src/buildinfo/makefile
+++ b/src/buildinfo/makefile
@@ -42,12 +42,16 @@ $(error Can't compile the buildinfo submodule because OIP_VERFLAGS is not define
 endif
 
 compile: $(FILES)
-	@echo -n "[INFO]: Compiling the buildinfo submodule...";			\
-	mkdir -p $(BINDIR);								\
-	cd $(BINDIR);									\
-	$(CC) -c $(CCFLAGS) $(OIP_VERFLAGS) $(INCLUDES) $(FILES) $(LFLAGS);		\
-	ar rcs lib$(NAME).a *.o;							\
-	rm *.o;										\
+	@echo -n "[INFO]: Compiling the buildinfo submodule...";	\
+	mkdir -p $(BINDIR);						\
+	cd $(BINDIR);							\
+	$(CC) -c $(CCFLAGS)						\
+		-DOIP_BUILD_VERSION=$$OIP_BUILD_VERSION			\
+		-DOIP_BUILD_DATE=$$OIP_BUILD_DATE			\
+		-DOIP_BUILD_DEBUG=$$OIP_BUILD_DEBUG			\
+		$(INCLUDES) $(FILES) $(LFLAGS);				\
+	ar rcs lib$(NAME).a *.o;					\
+	rm *.o;								\
 	echo " Done."
 	
 clean:
