Link libasan statically when DEBUG=1

--- a/src/oipshell/makefile
+++ b/src/oipshell/makefile
@@ -26,7 +26,7 @@ NAME=oipshell
 DEBUG=0
 ifeq ($(DEBUG), 1)
 $(info [INFO]: Enabling debugging options.)
-CCFLAGS+=-fsanitize=address -g
+CCFLAGS+=-fsanitize=address -static-libasan -g
 endif
 
 ifndef BUILDROOT
