--- a/src/oipcore/oipptrarray/makefile
+++ b/src/oipcore/oipptrarray/makefile
@@ -28,7 +28,7 @@ NAME=oipptrarray
 DEBUG=0
 ifeq ($(DEBUG), 1)
 $(info [INFO]: Enabling debugging options.)
-CCFLAGS+=-fsanitize=address -g
+CCFLAGS+=-fsanitize=address -static-libasan -g
 endif
 
 ifndef BUILDROOT
